# whitelabel

./: .gitignore  README.md  pyproject.toml  setup.py
whitelabel/: __init__.py  api.py  hooks.py
whitelabel/fixtures/: translation.json
whitelabel/public/css/: whitelabel_app.css
whitelabel/public/js/: branding.js  whitelabel.js
whitelabel/whitelabel/doctype/whitelabel_setting/: whitelabel_setting.py
