[project]
name = "whitelabel"
authors = [
    { name = "Bhavesh Maheshwari", email = "maheshwaribhavesh95863@gmail.com" }
]
description = "ERPNext Whitelabel - Customizable branding solution for ERPNext"
requires-python = ">=3.10,<3.15"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # frappe dependencies
    "frappe~=16.0"
]

[project.urls]
Homepage = "https://github.com/bhavesh95863/whitelabel"
Repository = "https://github.com/bhavesh95863/whitelabel.git"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017",   # assertRaises(Exception) - should be more specific
    "B018",   # useless expression, not assigned to anything
    "B023",   # function doesn't bind loop variable - will have last iteration's value
    "B904",   # raise inside except without from
    "E101",   # indentation contains mixed spaces and tabs
    "E402",   # module level import not at top of file
    "E501",   # line too long
    "E741",   # ambiguous variable name
    "F401",   # "unused" imports
    "F403",   # can't detect undefined names from * import
    "F405",   # can't detect undefined names from * import
    "F722",   # syntax error in forward type annotation
    "W191",   # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "frappe",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"frappe" = ["frappe"]
